# opensmile

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  _config.yaml  about.html  acknowledgement.html  bibliography.html  build.ps1  build.sh  buildAndroid.sh  buildIos.sh  buildIosUniversalLib.sh  build_flags.ps1  build_flags.sh  conanfile.py  developer.html  genindex.html  get-started.html  index.html  make_release.sh  objects.inv  reference.html  search.html  searchindex.js
_components/: cAcf.html  cAmdf.html  cArffSink.html  cArffSource.html  cBowProducer.html  cCens.html  cChroma.html  cContourSmoother.html  cCsvSink.html  cCsvSource.html  cDataMemory.html  cDataPrintSink.html  cDataProcessor.html  cDataReader.html  cDataSelector.html  cDataSink.html  cDataSource.html  cDataWriter.html  cDatadumpSink.html  cDbA.html  cDeltaRegression.html  cEnergy.html  cExampleSink.html  cExampleSource.html  cExternalAudioSource.html  cExternalMessageInterface.html  cExternalSink.html  cExternalSource.html  cFFTmagphase.html  cFFmpegSource.html  cFormantLpc.html  cFormantSmoother.html  cFramer.html  cFullinputMean.html  cFullturnMean.html  cFunctionalCrossings.html  cFunctionalDCT.html  cFunctionalExtremes.html  cFunctionalLpc.html  cFunctionalMeans.html  (+68 more)
_sources/: acknowledgement.rst.txt  bibliography.rst.txt  developer.rst.txt  get-started.rst.txt  index.rst.txt  reference.rst.txt
_sources/_components/: cAcf.rst.txt  cAmdf.rst.txt  cArffSink.rst.txt  cArffSource.rst.txt  cBowProducer.rst.txt  cCens.rst.txt  cChroma.rst.txt  cContourSmoother.rst.txt  cCsvSink.rst.txt  cCsvSource.rst.txt  cDataMemory.rst.txt  cDataPrintSink.rst.txt  cDataProcessor.rst.txt  cDataReader.rst.txt  cDataSelector.rst.txt  cDataSink.rst.txt  cDataSource.rst.txt  cDataWriter.rst.txt  cDatadumpSink.rst.txt  cDbA.rst.txt  cDeltaRegression.rst.txt  cEnergy.rst.txt  cExampleSink.rst.txt  cExampleSource.rst.txt  cExternalAudioSource.rst.txt  cExternalMessageInterface.rst.txt  cExternalSink.rst.txt  cExternalSource.rst.txt  cFFTmagphase.rst.txt  cFFmpegSource.rst.txt  cFormantLpc.rst.txt  cFormantSmoother.rst.txt  cFramer.rst.txt  cFullinputMean.rst.txt  cFullturnMean.rst.txt  cFunctionalCrossings.rst.txt  cFunctionalDCT.rst.txt  cFunctionalExtremes.rst.txt  cFunctionalLpc.rst.txt  cFunctionalMeans.rst.txt  (+68 more)
_static/css/: audeering-wide.css  audeering.css
cmake/: FindJulius.cmake  FindOpenSLES.cmake  Findportaudio.cmake
config/audiovisual/: arff_targets_age.conf  audio.conf  audiovideo.conf  video.conf
config/audspec/: audspec.conf  audspec_compat.conf
config/avec11-14/: avec2011.conf  avec2012.readme  avec2013.conf  avec2013_functionals_core.conf.inc  avec2013_functionals_frame_mode.conf.inc  avec2013_lld_core.conf.inc  avec2014.readme
config/chroma/: chroma_fft.conf  chroma_filt.conf
config/compare16/: ComParE_2016.conf  ComParE_2016_core.func.conf.inc  ComParE_2016_core.lld.conf.inc
config/demo/: audioplayer.conf  audiorecorder-android.conf  audiorecorder.conf  demo1_energy.conf  signalGenerator.conf
config/egemaps/: CHANGES.txt
config/emobase/: emobase.conf  emobase2010.conf  emobase_live4.conf  emobase_live4_batch.conf  emobase_live4_batch_single.conf
config/gemaps/: CHANGES.txt
config/gui/: visgui.conf  visgui_cepstr.conf  visgui_chroma.conf  visgui_melspec.conf  visgui_mfcc.conf  visgui_pitch_funct.conf  visgui_semitone.conf  visgui_spect.conf
config/is09-13/: IS09_emotion.conf  IS09_emotion_core.func.conf.inc  IS09_emotion_core.lld.conf.inc  IS10_paraling.conf  IS10_paraling_compat.conf  IS10_paraling_core.func.conf.inc  IS10_paraling_core.lld.conf.inc  IS11_speaker_state.conf  IS12_speaker_trait.conf  IS12_speaker_trait_compat.conf  IS13_ComParE.conf  IS13_ComParE_Voc.conf  IS13_ComParE_core.func.conf.inc  IS13_ComParE_core.lld.conf.inc
config/mediaeval12/: MediaEval_Audio_IS12based_subwin2.conf  MediaEval_Audio_IS12based_subwin2_step0.5.conf  MediaEval_VideoFunctionals.conf  MediaEval_VideoFunctionals_subwin.conf
config/mfcc/: MFCC12_0_D_A.conf  MFCC12_0_D_A_Z.conf  MFCC12_E_D_A.conf  MFCC12_E_D_A_Z.conf
config/misc/: emo_large.conf  list_audio_devices.conf
config/plp/: PLP_0_D_A.conf  PLP_0_D_A_Z.conf  PLP_E_D_A.conf  PLP_E_D_A_Z.conf
config/prosody/: liveProsodyAcf.conf  prosodyAcf.conf  prosodyShs.conf  prosodyShsViterbiLoudness.conf  smileF0.conf  smileF0_base.conf.inc  smileF0_mean.conf
config/shared/: BufferMode.conf.inc  BufferModeLive.conf.inc  BufferModeRb.conf.inc  BufferModeRbLag.conf.inc  FrameModeFunctionals.conf.inc  FrameModeFunctionalsLive.conf.inc  (+8 more)
gradle/: README.md  build.gradle  gradle.properties
licenses/: FFmpeg.txt  Julius.txt  LibSVM.txt  PortAudio.txt  Rapidjson.txt  Speex.txt  newmat.txt
plugindev/: CMakeLists.txt  ClassifierResultGUI.cpp  ClassifierResultGUI.hpp  README  build.sh  exampleGuipluginSink.cpp  exampleGuipluginSink.hpp  plug_exampleSink.cpp  plug_exampleSink.hpp  pluginGuiMain.cpp  pluginMain.cpp  simpleVisualiserGUI.cpp  simpleVisualiserGUI.hpp
progsrc/android-template/opensmile/: CMakeLists.txt  build.gradle  opensmile.i
progsrc/android-template/opensmile/src/main/: AndroidManifest.xml
progsrc/android-template/opensmile/src/main/java/com/audeering/opensmile/: OpenSmileAdapter.kt
progsrc/android-template/opensmile/src/main/res/values/: strings.xml
progsrc/smileapi/: CMakeLists.txt  SMILEapi.cpp  SMILEapi.def
progsrc/smileapi/dotnet/SMILEapi/: SMILEapi.cs  SMILEapi.csproj
progsrc/smileapi/python/opensmile/: SMILEapi.py
progsrc/smilextract/: CMakeLists.txt  SMILExtract.cpp
scripts/: arff_naninfzero_checker.pl  clonecomp.pl  conf2dot.py  extract_features_batch.pl  plot-lld.pl
src/newmat/: CMakeLists.txt  LICENSE.txt  bandmat.cpp  cholesky.cpp  evalue.cpp  fft.cpp  hholder.cpp  jacobi.cpp  myexcept.cpp  newfft.cpp  newmat1.cpp  newmat2.cpp  newmat3.cpp  newmat4.cpp  newmat5.cpp  newmat6.cpp  newmat7.cpp  newmat8.cpp  newmat9.cpp  newmatex.cpp  newmatnl.cpp  newmatrm.cpp  solution.cpp  sort.cpp  submat.cpp  svd.cpp
test_package/: CMakeLists.txt  conanfile.py  smileapi_test.cpp
(+429 files in other folders)
